--- a/_data/locales/sv-SE.yml
+++ b/_data/locales/sv-SE.yml
@@ -39,7 +39,7 @@ copyright:
   verbose: >-
     Om inte annat anges är blogginläggen på denna webbplats licensierade
      under Creative Commons Attribution 4.0 International (CC BY 4.0) av författaren.
-meta:  Byggd med :PLATFORM och temat :THEME .
+meta:  
 
 not_found:
   statment: Ursäkta, vi har tappat bort den här webbadressen eller så pekar den på något som inte längre finns.
